--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-material-ui-carousel": "^2.3.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
