--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "cookie": "^0.4.1",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "universal": "^0.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
