--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie": "^0.4.1",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.3.8",
     "react-redux": "^7.2.6",
